# IP-Sender-Rust

./: Cargo.toml  README.MD  config.json
src/: main.rs
