[package]
name = "IP-Sender-Bot"
version = "0.1.0"
authors = ["HirbodBehnam <chrome.hiri.angry@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13.0"

sha2 = "0.9.2"

serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

telegram-bot = "0.7"

log = "0.4.8"
pretty_env_logger = "0.4.0"

tokio = { version =  "0.2.11", features = ["rt-threaded", "macros"] }