[package]
name = "ip_sender_bot"
version = "0.2.0"
authors = ["HirbodBehnam <chrome.hiri.angry@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "*"
hex = "0.4"
sha2 = "0.9.2"

teloxide = { version = "0.5", features = ["auto-send", "macros"] }
log = "0.4.8"
pretty_env_logger = "0.4.0"
tokio = { version =  "1", features = ["full"] }

reqwest = { version = "0.11", features = ["json"] }